{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 26,
  "lineage": "acc258b0-c156-41b9-926b-dd925e6c1021",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:loadbalancer/app/flask-app-demo/9442875fa71f7091",
            "arn_suffix": "app/flask-app-demo/9442875fa71f7091",
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-app-demo-911359485.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:871634345479:loadbalancer/app/flask-app-demo/9442875fa71f7091",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-app-demo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b261bd5b0c109b78"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04093b51f376fa9af"
              },
              {
                "subnet_id": "subnet-05b0937191ba76904"
              },
              {
                "subnet_id": "subnet-067de12b71768f3e5"
              }
            ],
            "subnets": [
              "subnet-04093b51f376fa9af",
              "subnet-05b0937191ba76904",
              "subnet-067de12b71768f3e5"
            ],
            "tags": {
              "Name": "flask-app-demo"
            },
            "tags_all": {
              "Name": "flask-app-demo"
            },
            "vpc_id": "vpc-008978684f0e261cb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:listener/app/flask-app-demo/9442875fa71f7091/d573453c76912b1a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:targetgroup/flask-app-demo/5868abaa00e17d5e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871634345479:listener/app/flask-app-demo/9442875fa71f7091/d573453c76912b1a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:loadbalancer/app/flask-app-demo/9442875fa71f7091",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_demo",
            "aws_lb_target_group.flask_app_demo",
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:targetgroup/flask-app-demo/5868abaa00e17d5e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:listener-rule/app/flask-app-demo/9442875fa71f7091/d573453c76912b1a/68d6b80ef0869393",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871634345479:listener-rule/app/flask-app-demo/9442875fa71f7091/d573453c76912b1a/68d6b80ef0869393",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:listener/app/flask-app-demo/9442875fa71f7091/d573453c76912b1a",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_demo",
            "aws_lb_listener.flask_app_demo",
            "aws_lb_target_group.flask_app_demo",
            "aws_security_group.flask_app_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:871634345479:targetgroup/flask-app-demo/5868abaa00e17d5e",
            "arn_suffix": "targetgroup/flask-app-demo/5868abaa00e17d5e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:871634345479:targetgroup/flask-app-demo/5868abaa00e17d5e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-app-demo",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-008978684f0e261cb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_app_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871634345479:security-group/sg-0b261bd5b0c109b78",
            "description": "Allow inbound traffic to flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b261bd5b0c109b78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "flask-app-demo",
            "name_prefix": "",
            "owner_id": "871634345479",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008978684f0e261cb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}